Fixed some spacing stuff with the code generator

--- a/src/Terminal/code-block-generator.css
+++ b/src/Terminal/code-block-generator.css
@@ -1,6 +1,5 @@
 .code-block-generator {
     width: 50%;
-    min-height: 50px;
     white-space: pre;
     user-select: none;
     -webkit-user-select: none;
